maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var a:Int
      ^RandomMouseMaze:3: error: local variables must be initialized
  var a:Int
      ^