maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  var a:Int
  while (estSurBiscuit==false){
    a=random3()
    a match {
      case 0 => avance()
      case 1 => droite()
      case 2 => gauche()
    }
  }
  
  
  
  
  

}